<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:id="@+id/dialogWindow"
    android:background="@drawable/main_background"
    android:layout_gravity="center"
    android:layout_margin="50dp">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="180dp"
      android:gravity="center"
      android:orientation="horizontal"
      android:padding="20dp">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:text="@string/noLife"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="italic" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="120dp"
      android:gravity="center"
      android:orientation="horizontal">

    <TextView
        android:id="@+id/btnAD"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/btn_level_all"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/AD"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btnEsc"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/btn_level_all"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/exit"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

  </LinearLayout>

</LinearLayout>