<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

  <ImageView
      android:id="@+id/imageView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:scaleType="centerCrop"
      app:srcCompat="@drawable/main_background" />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:orientation="vertical">

    <Button
        android:id="@+id/buttonCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/btn_stroke_all"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:text="@string/countinue"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <Button
        android:id="@+id/buttonSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/btn_stroke_all"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:text="@string/btn_setting"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/btn_stroke_all"
        android:paddingLeft="35dp"
        android:paddingRight="45dp"
        android:text="@string/exit"
        android:textColor="@color/black"
        android:textSize="28sp" />

  </LinearLayout>

</RelativeLayout>