<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

  <ImageView
      android:id="@+id/imageView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:scaleType="centerCrop"
      app:srcCompat="@drawable/main_background" />

  <ImageView
      android:id="@+id/backToMenu"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_marginStart="25dp"
      android:layout_marginTop="25dp"
      android:layout_marginEnd="25dp"
      android:layout_marginBottom="25dp"
      app:srcCompat="@drawable/back" />

  <TextView
      android:id="@+id/textView_setting"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="120dp"
      android:gravity="center"
      android:textColor="@color/black"
      android:text="@string/btn_setting"
      android:textSize="60dp"
      android:textStyle="bold|italic" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginStart="50dp"
      android:layout_marginTop="200dp"
      android:layout_marginEnd="50dp"
      android:layout_marginBottom="50dp"
      android:gravity="center"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

          <TextView
              android:id="@+id/textView6"
              android:layout_width="120dp"
              android:layout_height="80dp"
              android:gravity="center"
              android:padding="10dp"
              android:paddingTop="10dp"
              android:text="@string/sound"
              android:textColor="@color/black"
              android:textSize="40dp" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical" >

          <TextView
              android:id="@+id/caseSwitch"
              android:layout_width="160dp"
              android:layout_height="80dp"
              android:gravity="center"
              android:padding="10dp"
              android:paddingTop="10dp"
              android:text="@string/on"
              android:textColor="@color/black"
              android:textSize="40dp" />
      </LinearLayout>
    </LinearLayout>

  </LinearLayout>

</RelativeLayout>