<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <ImageView
      android:id="@+id/main_background"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scaleType="centerCrop"
      android:src="@drawable/main_background" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

      <LinearLayout
          android:layout_width="250dp"
          android:layout_height="250dp"
          android:layout_marginBottom="40dp"
          android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:srcCompat="@drawable/ico" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:orientation="vertical">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_stroke_all"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/btn_start"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <Button
            android:id="@+id/buttonSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_stroke_all"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/btn_setting"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_stroke_all"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/exit"
            android:textColor="@color/black"
            android:textSize="28sp" />

      </LinearLayout>
    </LinearLayout>
  </LinearLayout>

</RelativeLayout>